patient medication module

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 PORT = 3031
 DB_HOST=localhost
 NODE_ENV=development
-jwt_master_secret=jsonsecret
-DEBUG=app:*
+TOKEN_SECRET =  Santosh_Singh_Dhami
